--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     - primary meta tag
   -->
 
-  <title>EduWeb - The Best Program to Enroll for Exchange</title>
+  <title>vicky filmora</title>
   <meta name="title" content="EduWeb - The Best Program to Enroll for Exchange">
   <meta name="description" content="This is an education html template made by codewithsadee">
   <!-- 
     - favicon
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="image/logo.jpg" type="image/svg+xml">
   <!-- 
     - custom css link
   -->
@@ -50,14 +50,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="image/filmlogo.jpg" width="162" height="50" alt="EduWeb logo">
+        <img src="image/logo.jpg" width="162" height="50" alt="EduWeb logo">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
           <a href="#" class="logo">
-            <img src="image/filmlogo.jpg" width="162" height="50" alt="EduWeb logo">
+            <img src="image/logo.jpg" width="162" height="50" alt="EduWeb logo">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -987,7 +987,7 @@
         <div class="footer-brand">
 
           <a href="#" class="logo">
-            <img src="image/filmlogo.jpg" style="height: 100px; width: 256px;" width="162" height="50" alt="EduWeb logo">
+            <img src="image/logo.jpg" style="height: 100px; width: 256px;" width="162" height="50" alt="EduWeb logo">
           </a>
 
           <p class="footer-brand-text">
