--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
           <div class="hero-content">
 
             <h1 class="h1 section-title">
-              The Finest <span class="span">Production House </span> in Odisha
+              The Finest <span class="span" style="color: darkred;">Production House </span> in Odisha
             </h1>
 
             <p class="hero-text"><b>
 
-                Gada chandi Films is a production house in Odisha, with a team of young and passionate
+                vicky Filmora Films is a production house in Odisha, with a team of young and passionate
                 professionals ready to try something new every day. Our Production House is as diverse as our team. We
                 have Directors, Producers, Storytellers and Graphic Designers who can create stories in all kind of
                 formats- from TV Commercials to Promos, Vignettes to on-air graphics, Television Shows to Documentaries,
@@ -172,7 +172,7 @@
           <p class="section-subtitle">Our Services</p>
 
           <h2 class="h2 section-title">
-            Gadachandi Production, <span class="span">belive in nurturing new talent </span>
+            vicky Filmora Production, <span class="span">belive in nurturing new talent </span>
           </h2>
 
           <p class="section-text">
@@ -819,7 +819,7 @@
 
           <p class="section-subtitle">Latest Articles</p>
 
-          <h2 class="h2 section-title">Get News With Gadachandi Films</h2>
+          <h2 class="h2 section-title">Get News With vicky Filmora Films</h2>
 
           <ul class="grid-list">
 
@@ -976,8 +976,11 @@
 
 
   <!-- 
-    - #FOOTER
-  -->
+
+
+  - #FOOTER
+
+  --> 
 
   <footer class="footer" style="background-image: url('image/footer-bg.png')">
 
@@ -990,12 +993,12 @@
             <img src="image/logo.jpg" style="height: 100px; width: 256px;" width="162" height="50" alt="EduWeb logo">
           </a>
 
-          <p class="footer-brand-text">
+          <!-- <p class="footer-brand-text">
             Lorem ipsum dolor amet consecto adi pisicing elit sed eiusm tempor incidid unt labore dolore.
-          </p>
+          </p> -->
 
           <div class="wrapper">
-            <span class="span">Add:</span>
+            <span class="span">Address:</span>
 
             <address class="address">
             odisha,india
@@ -1005,13 +1008,13 @@
           <div class="wrapper">
             <span class="span">Call:</span>
 
-            <a href="tel:+011234567890" class="footer-link">+91 7847077422</a>
+            <a href="tel:+7840774227" class="footer-link">+91 7847077422</a>
           </div>
 
           <div class="wrapper">
             <span class="span">Email:</span>
 
-            <a href="vickymuduli3083@gmail.com" class="footer-link">vickymuduli3083@gmail.com</a>
+            <a href="mailto:vickymuduli3083@gmail.com" class="footer-link">vickymuduli3083@gmail.com</a>
           </div>
 
         </div>
